# mesmots

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: mirror_hf.yaml  test.yaml
Lexique383/: Lexique383.csv
dataset/: ProbaEncoder.csv
mesmots/: __main__.py  api.py  main.py  ml.py  mots.py  tests.py  web.py  web_fastapi.py
mesmots/static/: decompose-word.html  find-word.html  index.html  plot.html
mesmots/training/: SyllabDecoder.py  SyllabEncoder.py  SyllabPlot.py  SyllabTokenize.py
mesmots/views/: index.html
training/: SyllabDecoder.py  SyllabEncoder.py  utils.py
