[project]
name = "mesmots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle>=0.13.4",
    "fr-core-news-sm>=3.8.0",
    "polars>=1.37.1",
    "requests>=2.32.5",
    "simpleeval>=1.0.3",
    "spacy>=3.8.11",
    "spacy-syllables>=3.0.2",
    "torch>=2.10.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
