[project]
name = "mesmots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle>=0.13.4",
    "polars>=1.37.1",
    "requests>=2.32.5",
    "simpleeval>=1.0.3",
    "torch>=2.10.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
#url = "https://download.pytorch.org/whl/cpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
